// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalButtonList Default props and rendering - Single left aligned grey button verifies the snapshot for the component 1`] = `
<div
  className="ajc-flex-row ajc-spacing-bottom-small ajc-background-transparent ajc-width-hd-inner ajc-flex-justify-left"
>
  <button
    className="ajc-button ajc-font-default ajc-button-grey"
    id="test-single-button-id"
    onClick={[MockFunction]}
    title="This is a test tooltip"
    type="button"
  >
    Test Default Single Grey Button
  </button>
</div>
`;

exports[`HorizontalButtonList Transferred props and rendering - Center aligned multiple grey buttons with label text, added upper spacing verifies the snapshot for the component 1`] = `
Array [
  <div
    className="ajc-flex-row ajc-spacing-bottom-small ajc-width-hd-inner ajc-text-black ajc-font-default ajc-flex-justify-center ajc-spacing-top-large"
  >
    <h2
      className="ajc-font-paragraph-heading"
    >
      Test Buttons List Label Text
    </h2>
  </div>,
  <div
    className="ajc-flex-row ajc-spacing-bottom-small ajc-background-transparent ajc-width-hd-inner ajc-flex-justify-center ajc-spacing-top-reduced"
  >
    <button
      className="ajc-button ajc-font-default ajc-button-grey ajc-spacing-right-small"
      id="test-button-1-id"
      onClick={[MockFunction]}
      title="This is a test tooltip"
      type="button"
    >
      Test Button 1
    </button>
    <button
      className="ajc-button ajc-font-default ajc-button-grey"
      id="test-button-2-id"
      onClick={[MockFunction]}
      title="This is a test tooltip"
      type="button"
    >
      Test Button 2
    </button>
  </div>,
]
`;

exports[`HorizontalButtonList Transferred props and rendering - Left aligned multiple red buttons with label text, default upper spacing verifies the snapshot for the component 1`] = `
Array [
  <div
    className="ajc-flex-row ajc-spacing-bottom-small ajc-width-hd-inner ajc-text-black ajc-font-default ajc-flex-justify-left"
  >
    <h2
      className="ajc-font-paragraph-heading"
    >
      Test Buttons List Label Text
    </h2>
  </div>,
  <div
    className="ajc-flex-row ajc-spacing-bottom-small ajc-background-transparent ajc-width-hd-inner ajc-flex-justify-left ajc-spacing-top-reduced"
  >
    <button
      className="ajc-button ajc-font-default ajc-button-red ajc-spacing-right-small"
      id="test-button-1-id"
      onClick={[MockFunction]}
      title="This is a test tooltip"
      type="button"
    >
      Test Button 1
    </button>
    <button
      className="ajc-button ajc-font-default ajc-button-red"
      id="test-button-2-id"
      onClick={[MockFunction]}
      title="This is a test tooltip"
      type="button"
    >
      Test Button 2
    </button>
  </div>,
]
`;

exports[`HorizontalButtonList Transferred props and rendering - Multiple center aligned red buttons verifies the snapshot for the component 1`] = `
<div
  className="ajc-flex-row ajc-spacing-bottom-small ajc-background-transparent ajc-width-hd-inner ajc-flex-justify-center"
>
  <button
    className="ajc-button ajc-font-default ajc-button-red ajc-spacing-right-small"
    id="test-button-1-id"
    onClick={[MockFunction]}
    title="This is a test tooltip"
    type="button"
  >
    Test Button 1
  </button>
  <button
    className="ajc-button ajc-font-default ajc-button-red"
    id="test-button-2-id"
    onClick={[MockFunction]}
    title="This is a test tooltip"
    type="button"
  >
    Test Button 2
  </button>
</div>
`;

exports[`HorizontalButtonList Transferred props and rendering - Right aligned multiple red buttons with label text, no upper spacing verifies the snapshot for the component 1`] = `
Array [
  <div
    className="ajc-flex-row ajc-spacing-bottom-small ajc-width-hd-inner ajc-text-black ajc-font-default ajc-flex-justify-right"
  >
    <h2
      className="ajc-font-paragraph-heading"
    >
      Test Buttons List Label Text
    </h2>
  </div>,
  <div
    className="ajc-flex-row ajc-spacing-bottom-small ajc-background-transparent ajc-width-hd-inner ajc-flex-justify-right ajc-spacing-top-reduced"
  >
    <button
      className="ajc-button ajc-font-default ajc-button-red ajc-spacing-right-small"
      id="test-button-1-id"
      onClick={[MockFunction]}
      title="This is a test tooltip"
      type="button"
    >
      Test Button 1
    </button>
    <button
      className="ajc-button ajc-font-default ajc-button-red"
      id="test-button-2-id"
      onClick={[MockFunction]}
      title="This is a test tooltip"
      type="button"
    >
      Test Button 2
    </button>
  </div>,
]
`;

exports[`HorizontalButtonList Transferred props and rendering - Single right aligned grey submit button verifies the snapshot for the component 1`] = `
<div
  className="ajc-flex-row ajc-spacing-bottom-small ajc-background-transparent ajc-width-hd-inner ajc-flex-justify-right"
>
  <button
    className="ajc-button ajc-font-default ajc-button-grey"
    id="test-single-submit-button-id"
    onClick={[MockFunction]}
    title="This is a test tooltip"
    type="submit"
  >
    Test Submit Button
  </button>
</div>
`;
